@@ -27,6 +27,7 @@ import static android.companion.AssociationRequest.DEVICE_PROFILE_VIRTUAL_DEVICE
 import static android.companion.AssociationRequest.DEVICE_PROFILE_WATCH;
 import static android.companion.CompanionResources.PERMISSION_ADD_MIRROR_DISPLAY;
 import static android.companion.CompanionResources.PERMISSION_ADD_TRUSTED_DISPLAY;
+import static android.companion.CompanionResources.PERMISSION_APP_STREAMING;
 import static android.companion.CompanionResources.PERMISSION_BYPASS_DND;
 import static android.companion.CompanionResources.PERMISSION_CALENDAR;
 import static android.companion.CompanionResources.PERMISSION_CALL_LOGS;
@@ -88,16 +89,15 @@ public final class RolesUtils {
             ),
 
             DEVICE_PROFILE_APP_STREAMING,
-            android.companion.virtualdevice.flags.Flags.itemizedVdmPermissions()
-                    ? List.of(PERMISSION_CREATE_VIRTUAL_DEVICE, PERMISSION_ADD_MIRROR_DISPLAY,
-                            PERMISSION_ADD_TRUSTED_DISPLAY, PERMISSION_POST_NOTIFICATIONS)
-                    : Collections.emptyList(),
+            android.companion.Flags.expandAppStreamingRolePermissions()
+                    ? List.of(PERMISSION_APP_STREAMING, PERMISSION_NOTIFICATIONS,
+                            PERMISSION_STORAGE)
+                    : List.of(PERMISSION_CREATE_VIRTUAL_DEVICE, PERMISSION_ADD_MIRROR_DISPLAY,
+                            PERMISSION_ADD_TRUSTED_DISPLAY, PERMISSION_POST_NOTIFICATIONS),
 
-            DEVICE_PROFILE_NEARBY_DEVICE_STREAMING,
-            android.companion.virtualdevice.flags.Flags.itemizedVdmPermissions()
-                    ? List.of(PERMISSION_CREATE_VIRTUAL_DEVICE, PERMISSION_ADD_TRUSTED_DISPLAY,
-                    PERMISSION_POST_NOTIFICATIONS)
-                    : Collections.emptyList(),
+            DEVICE_PROFILE_NEARBY_DEVICE_STREAMING, List.of(
+                    PERMISSION_CREATE_VIRTUAL_DEVICE, PERMISSION_ADD_TRUSTED_DISPLAY,
+                    PERMISSION_POST_NOTIFICATIONS),
 
             DEVICE_PROFILE_VIRTUAL_DEVICE, List.of(PERMISSION_CREATE_VIRTUAL_DEVICE,
                             PERMISSION_NEARBY_DEVICES, PERMISSION_POST_NOTIFICATIONS)
