@@ -26,6 +26,9 @@ import static android.hardware.display.DisplayManager.DeviceConfig.KEY_REFRESH_R
 import static android.hardware.display.DisplayManager.DeviceConfig.KEY_REFRESH_RATE_IN_HBM_SUNLIGHT;
 import static android.hardware.display.DisplayManager.DeviceConfig.KEY_REFRESH_RATE_IN_HIGH_ZONE;
 import static android.hardware.display.DisplayManager.DeviceConfig.KEY_REFRESH_RATE_IN_LOW_ZONE;
+import static android.hardware.display.DisplayManager.HDR_PREFERENCE_HDR_ALLOWED;
+import static android.hardware.display.DisplayManager.HDR_PREFERENCE_SDR_ONLY;
+import static android.view.Display.HdrCapabilities.HDR_TYPE_HDR10;
 
 import static com.android.server.display.TestUtilsKt.createSensor;
 import static com.android.server.display.TestUtilsKt.createSensorEvent;
@@ -228,6 +231,39 @@ public class DisplayModeDirectorTest {
                                         0, 64.99f))}});
 
         return appRequestedSizeTestCases;
+    }
+
+    public static Object[] getHdrPreferenceTestCases() {
+        return new Object[][] {
+            {
+                Display.TYPE_EXTERNAL,
+                /* isUserPreferredHdrModeAllowed= */ true,
+                HDR_PREFERENCE_SDR_ONLY,
+                /* expectVote= */ true,
+                /* expectedAllowHdr= */ false
+            },
+            {
+                Display.TYPE_EXTERNAL,
+                /* isUserPreferredHdrModeAllowed= */ true,
+                HDR_PREFERENCE_HDR_ALLOWED,
+                /* expectVote= */ true,
+                /* expectedAllowHdr= */ true
+            },
+            {
+                Display.TYPE_EXTERNAL,
+                /* isUserPreferredHdrModeAllowed= */ false,
+                HDR_PREFERENCE_HDR_ALLOWED,
+                /* expectVote= */ false,
+                /* expectedAllowHdr= */ false
+            },
+            {
+                Display.TYPE_INTERNAL,
+                /* isUserPreferredHdrModeAllowed= */ true,
+                HDR_PREFERENCE_HDR_ALLOWED,
+                /* expectVote= */ false,
+                /* expectedAllowHdr= */ false
+            }
+        };
     }
 
     private static final String TAG = "DisplayModeDirectorTest";
@@ -3221,8 +3257,7 @@ public class DisplayModeDirectorTest {
         listener.notifyThrottling(getSkinTemp(Temperature.THROTTLING_CRITICAL));
         BackgroundThread.getHandler().runWithScissors(() -> { }, 500 /*timeout*/);
         vote = director.getVote(DISPLAY_ID, Vote.PRIORITY_SKIN_TEMPERATURE);
-        Vote expectedVote = new CombinedVote(List.of(new RefreshRateVote.RenderVote(0f, 60f)));
-        assertEquals(expectedVote, vote);
+        assertVoteForRenderFrameRateRange(vote, 0f, 60f);
 
         // Set the skin temperature to severe and verify that the vote is gone.
         listener.notifyThrottling(getSkinTemp(Temperature.THROTTLING_SEVERE));
@@ -3577,7 +3612,7 @@ public class DisplayModeDirectorTest {
     }
 
     @Test
-    public void testUpdateUserPreferredMode_withFlagSizeOverride_returnsNull() {
+    public void testUpdateUserPreferredMode_withFlagSizeOverride_returnsMode() {
         DisplayModeDirector director =
                 createDirectorFromRefreshRateArray(new float[]{60.0f, 90.0f}, 0);
         director.start(createMockSensorManager());
@@ -3601,10 +3636,92 @@ public class DisplayModeDirectorTest {
 
         displayListener.onDisplayChanged(DISPLAY_ID);
 
-        Vote vote = director.getVote(DISPLAY_ID, Vote.PRIORITY_USER_SETTING_DISPLAY_PREFERRED_SIZE);
-        assertThat(vote).isNull();
+        Vote vote = director.getVote(DISPLAY_ID,
+                Vote.PRIORITY_USER_SETTING_DISPLAY_PREFERRED_OPTIONS);
+        assertVoteForRenderFrameRateRange(vote, 0f, 60f);
     }
 
+    @Test
+    public void testUpdateUserPreferredMode_withFlagArrRenderRate_returnsMode() {
+        DisplayModeDirector director =
+                createDirectorFromRefreshRateArray(new float[]{60.0f, 90.0f}, 0);
+        director.start(createMockSensorManager());
+        waitForIdleSync();
+
+        ArgumentCaptor<DisplayListener> displayListenerCaptor =
+                ArgumentCaptor.forClass(DisplayListener.class);
+        verify(mInjector, atLeastOnce()).registerDisplayListener(displayListenerCaptor.capture(),
+                any(Handler.class));
+
+        DisplayListener displayListener = displayListenerCaptor.getAllValues().get(0);
+        mInjector.mDisplayInfo.supportedModes = new Display.Mode[] {
+                new Display.Mode(1, -1, Display.Mode.FLAG_ARR_RENDER_RATE,
+                        1000, 1000, 60f, 60f, new float[]{},
+                        new int[]{}),
+                new Display.Mode(2, -1, Display.Mode.FLAG_ARR_RENDER_RATE,
+                        2000, 2000, 60f, 60f, new float[]{},
+                        new int[]{}),
+        };
+        mInjector.mDisplayInfo.userPreferredModeId = 1;
+
+        displayListener.onDisplayChanged(DISPLAY_ID);
+
+        Vote vote = director.getVote(DISPLAY_ID,
+                Vote.PRIORITY_USER_SETTING_DISPLAY_PREFERRED_OPTIONS);
+        assertThat(vote).isInstanceOf(CombinedVote.class);
+        CombinedVote combinedVote = (CombinedVote) vote;
+        assertThat(combinedVote.mVotes).hasSize(2);
+        SizeVote sizeVote = (SizeVote) combinedVote.mVotes.getFirst();
+        RequestedRefreshRateVote rrVote = (RequestedRefreshRateVote) combinedVote.mVotes.getLast();
+        assertThat(sizeVote.mHeight).isEqualTo(1000);
+        assertThat(sizeVote.mWidth).isEqualTo(1000);
+        assertThat(sizeVote.mMinHeight).isEqualTo(1000);
+        assertThat(sizeVote.mMinWidth).isEqualTo(1000);
+        assertThat(rrVote.mRefreshRate).isWithin(FLOAT_TOLERANCE).of(60f);
+    }
+
+    @Test
+    public void testUpdateUserPreferredMode_withFlagAnisotropyCorrection_returnsMode() {
+        mContext.getOrCreateTestableResources().addOverride(
+                R.bool.config_refreshRateSynchronizationEnabled, false);
+        mInjector.setEnabledDisplays(Map.of(DISPLAY_ID, Display.TYPE_EXTERNAL));
+        DisplayModeDirector director =
+                createDirectorFromRefreshRateArray(new float[]{60.0f, 90.0f}, 0);
+        director.start(createMockSensorManager());
+        waitForIdleSync();
+
+        ArgumentCaptor<DisplayListener> displayListenerCaptor =
+                ArgumentCaptor.forClass(DisplayListener.class);
+        verify(mInjector, atLeastOnce()).registerDisplayListener(displayListenerCaptor.capture(),
+                any(Handler.class));
+
+        DisplayListener displayListener = displayListenerCaptor.getAllValues().get(0);
+        mInjector.mDisplayInfo.supportedModes = new Display.Mode[] {
+                new Display.Mode(1, 2, Display.Mode.FLAG_ANISOTROPY_CORRECTION,
+                        1000, 1000, 60f, 60f, new float[]{},
+                        new int[]{}),
+                new Display.Mode(2, -1, 0,
+                        2000, 2000, 60f, 60f, new float[]{},
+                        new int[]{}),
+        };
+        mInjector.mDisplayInfo.userPreferredModeId = 1;
+
+        displayListener.onDisplayChanged(DISPLAY_ID);
+
+        Vote vote = director.getVote(DISPLAY_ID,
+                Vote.PRIORITY_USER_SETTING_DISPLAY_PREFERRED_OPTIONS);
+        assertThat(vote).isInstanceOf(CombinedVote.class);
+        CombinedVote combinedVote = (CombinedVote) vote;
+        assertThat(combinedVote.mVotes).hasSize(2);
+        SizeVote sizeVote = (SizeVote) combinedVote.mVotes.getFirst();
+        Vote rrVote = combinedVote.mVotes.getLast();
+        assertThat(sizeVote.mHeight).isEqualTo(2000);
+        assertThat(sizeVote.mWidth).isEqualTo(2000);
+        assertThat(sizeVote.mMinHeight).isEqualTo(2000);
+        assertThat(sizeVote.mMinWidth).isEqualTo(2000);
+        assertVoteForPhysicalRefreshRate(rrVote, 60f);
+    }
+    // anisotropic
     @Test
     public void testUpdateUserPreferredMode_withoutFlagSizeOverride_returnsMode() {
         DisplayModeDirector director =
@@ -3630,8 +3747,103 @@ public class DisplayModeDirectorTest {
 
         displayListener.onDisplayChanged(DISPLAY_ID);
 
-        Vote vote = director.getVote(DISPLAY_ID, Vote.PRIORITY_USER_SETTING_DISPLAY_PREFERRED_SIZE);
+        Vote vote = director.getVote(DISPLAY_ID,
+                Vote.PRIORITY_USER_SETTING_DISPLAY_PREFERRED_OPTIONS);
         assertThat(vote).isNotNull();
+    }
+
+    @Test
+    @Parameters(method = "getHdrPreferenceTestCases")
+    public void testHdrPreferenceVote_Parameterized(
+            int displayType,
+            boolean isUserPreferredHdrModeAllowed,
+            int userPreference,
+            boolean expectVote,
+            boolean expectedAllowHdr) {
+
+        when(mInjector.isUserPreferredHdrModeAllowed()).thenReturn(isUserPreferredHdrModeAllowed);
+
+        mInjector.setEnabledDisplays(Map.of(DISPLAY_ID, displayType));
+
+        DisplayModeDirector director = createDirectorFromFpsRange(60, 90);
+        director.start(createMockSensorManager());
+
+        when(mInjector.getUserPreferredHdrMode(DISPLAY_ID)).thenReturn(userPreference);
+        director.setUserPreferredHdrMode(DISPLAY_ID, userPreference);
+        waitForIdleSync();
+
+        Vote vote = director.getVote(DISPLAY_ID, Vote.PRIORITY_USER_SETTING_HDR_MODE);
+
+        if (expectVote) {
+            assertVoteForHdrPreferenceVote(vote, expectedAllowHdr);
+        } else {
+            assertThat(vote).isNull();
+        }
+    }
+
+    @Test
+    public void testHdrPreferenceVote_selectModeAccordingToVote() {
+        Display.Mode hdrMode =
+                new Display.Mode(0, 1920, 1080, 60f, new float[0], new int[] {HDR_TYPE_HDR10});
+        Display.Mode sdrMode = new Display.Mode(1, 1920, 1080, 60f, new float[0], new int[0]);
+        Display.Mode[] modes = new Display.Mode[] {hdrMode, sdrMode};
+
+        mInjector.mDisplayInfo.supportedModes = modes;
+        mInjector.setEnabledDisplays(Map.of(DISPLAY_ID, Display.TYPE_EXTERNAL));
+
+        DisplayModeDirector director = createDirectorFromModeArray(modes, sdrMode);
+        director.start(createMockSensorManager());
+        assertThat(director.getDesiredDisplayModeSpecs(DISPLAY_ID).baseModeId).isEqualTo(0);
+
+        // Set preference to SDR_ONLY
+        int sdrOnly = HDR_PREFERENCE_SDR_ONLY;
+        when(mInjector.getUserPreferredHdrMode(DISPLAY_ID)).thenReturn(sdrOnly);
+        director.setUserPreferredHdrMode(DISPLAY_ID, sdrOnly);
+        waitForIdleSync();
+
+        assertThat(director.getDesiredDisplayModeSpecs(DISPLAY_ID).baseModeId).isEqualTo(1);
+
+        // Set preference to allow both HDR and SDR mode
+        int allowHdrSdr = HDR_PREFERENCE_HDR_ALLOWED;
+        when(mInjector.getUserPreferredHdrMode(DISPLAY_ID)).thenReturn(allowHdrSdr);
+        director.setUserPreferredHdrMode(DISPLAY_ID, allowHdrSdr);
+        waitForIdleSync();
+
+        assertThat(director.getDesiredDisplayModeSpecs(DISPLAY_ID).baseModeId).isEqualTo(0);
+    }
+
+    @Test
+    public void testHdrPreferenceVote_summaryAccumulation() {
+        Display.Mode hdrMode = new Display.Mode(2, 1920, 1080, 60f, new float[0],
+                new int[] {HDR_TYPE_HDR10});
+        Display.Mode sdrMode = new Display.Mode(1, 1920, 1080, 60f, new float[0], new int[0]);
+        Display.Mode[] modes = new Display.Mode[] {hdrMode, sdrMode};
+
+        mInjector.mDisplayInfo.supportedModes = modes;
+        mInjector.setEnabledDisplays(Map.of(DISPLAY_ID, Display.TYPE_EXTERNAL));
+
+        DisplayModeDirector director = createDirectorFromModeArray(modes, hdrMode);
+        director.start(createMockSensorManager());
+
+        SparseArray<Vote> votes = new SparseArray<>();
+        // Inject a vote that allows HDR
+        votes.put(Vote.PRIORITY_USER_SETTING_HDR_MODE, new HdrPreferenceVote(true));
+        // Inject a higher priority vote that limits HDR
+        votes.put(Vote.PRIORITY_USER_SETTING_HDR_MODE + 1, new HdrPreferenceVote(false));
+
+        SparseArray<SparseArray<Vote>> votesByDisplay = new SparseArray<>();
+        votesByDisplay.put(DISPLAY_ID, votes);
+        director.injectVotesByDisplay(votesByDisplay);
+
+        // Assert SDR because another vote has set allowHdr=false
+        DesiredDisplayModeSpecs specs = director.getDesiredDisplayModeSpecs(DISPLAY_ID);
+        assertThat(specs.baseModeId).isEqualTo(sdrMode.getModeId());
+
+        // Verify that removing the restrictive vote allows HDR
+        votes.remove(Vote.PRIORITY_USER_SETTING_HDR_MODE + 1);
+        director.injectVotesByDisplay(votesByDisplay);
+        specs = director.getDesiredDisplayModeSpecs(DISPLAY_ID);
+        assertThat(specs.baseModeId).isEqualTo(hdrMode.getModeId());
     }
 
     @Test
@@ -3641,7 +3853,7 @@ public class DisplayModeDirectorTest {
                 16600000, 16600000);
         DisplayDeviceConfig ddcMock = mock(DisplayDeviceConfig.class);
         RefreshRateData rrd = new RefreshRateData(60, 65, 65, 75,
-        /* defaultWorkDurations= */ workDurations, List.of(), List.of(), null);
+                /* defaultWorkDurations= */ workDurations, List.of(), List.of(), null);
         when(ddcMock.getRefreshRateData()).thenReturn(rrd);
         SparseArray<DisplayDeviceConfig> configs = new SparseArray<>();
         configs.put(DISPLAY_ID, ddcMock);
@@ -3769,10 +3981,13 @@ public class DisplayModeDirectorTest {
 
     private void assertVoteForPhysicalRefreshRate(Vote vote, float refreshRate) {
         assertThat(vote).isNotNull();
-        assertThat(vote).isInstanceOf(CombinedVote.class);
-        CombinedVote combinedVote = (CombinedVote) vote;
-        RefreshRateVote.PhysicalVote physicalVote =
-                (RefreshRateVote.PhysicalVote) combinedVote.mVotes.get(0);
+        RefreshRateVote.PhysicalVote physicalVote;
+        if (vote instanceof CombinedVote combinedVote) {
+            physicalVote = (RefreshRateVote.PhysicalVote) combinedVote.mVotes.getFirst();
+        } else {
+            physicalVote = (RefreshRateVote.PhysicalVote) vote;
+        }
+
         assertThat(physicalVote.mMinRefreshRate).isWithin(FLOAT_TOLERANCE).of(refreshRate);
         assertThat(physicalVote.mMaxRefreshRate).isWithin(FLOAT_TOLERANCE).of(refreshRate);
     }
@@ -3780,10 +3995,25 @@ public class DisplayModeDirectorTest {
     private void assertVoteForRenderFrameRateRange(
             Vote vote, float frameRateLow, float frameRateHigh) {
         assertThat(vote).isNotNull();
-        assertThat(vote).isInstanceOf(RefreshRateVote.RenderVote.class);
-        RefreshRateVote.RenderVote renderVote = (RefreshRateVote.RenderVote) vote;
-        assertThat(renderVote.mMinRefreshRate).isEqualTo(frameRateLow);
-        assertThat(renderVote.mMaxRefreshRate).isEqualTo(frameRateHigh);
+        RefreshRateVote.RenderVote renderVote;
+        if (vote instanceof CombinedVote combinedVote) {
+            renderVote = (RefreshRateVote.RenderVote) combinedVote.mVotes.getFirst();
+        } else {
+            renderVote = (RefreshRateVote.RenderVote) vote;
+        }
+        assertThat(renderVote.mMinRefreshRate).isWithin(FLOAT_TOLERANCE).of(frameRateLow);
+        if (frameRateHigh == Float.POSITIVE_INFINITY) {
+            assertThat(renderVote.mMaxRefreshRate).isEqualTo(Float.POSITIVE_INFINITY);
+        } else {
+            assertThat(renderVote.mMaxRefreshRate).isWithin(FLOAT_TOLERANCE).of(frameRateHigh);
+        }
+    }
+
+    private void assertVoteForHdrPreferenceVote(Vote vote, boolean allowHdr) {
+        assertThat(vote).isNotNull();
+        assertThat(vote).isInstanceOf(HdrPreferenceVote.class);
+        HdrPreferenceVote hdrVote = (HdrPreferenceVote) vote;
+        assertThat(hdrVote.mAllowHdr).isEqualTo(allowHdr);
     }
 
     public static class FakeDeviceConfig extends FakeDeviceConfigInterface {
@@ -4064,6 +4294,11 @@ public class DisplayModeDirectorTest {
         }
 
         @Override
+        public int getUserPreferredHdrMode(int displayId) {
+            return HDR_PREFERENCE_HDR_ALLOWED;
+        }
+
+        @Override
         public boolean registerThermalEventListener(IThermalEventListener listener) {
             return true;
         }
@@ -4074,6 +4309,11 @@ public class DisplayModeDirectorTest {
 
         @Override
         public boolean supportsFrameRateOverride() {
+            return true;
+        }
+
+        @Override
+        public boolean isUserPreferredHdrModeAllowed() {
             return true;
         }
 
